# kumir2

./: .gitignore  .gitlab-ci.yml  CMakeLists.txt  subdirs-disabled-2.1.0.txt
cmake/: Kumir2Config.cmake
cmake/kumir2/: kumir2_apple.cmake  kumir2_common.cmake  kumir2_linux.cmake  kumir2_win32.cmake
courses/practicum/Fields/: 7_3_1.fil
courses/practicum/Texts/: alg1.kum  alg2.kum  alg_example.kum  circle_for1.kum  circles_example.kum  cond1.kum  cond3.kum  file_med.kum  (+18 more)
debian/: changelog  control  copyright  kumir2-desktop-integration.install  kumir2-ide.install
include/kumir2/: actorinterface.h  analizer_compilerinterface.h  analizer_helperinterface.h  analizer_instanceinterface.h  analizer_sourcefileinterface.h  analizerinterface.h  browser_instanceinterface.h  browserinterface.h  coursesinterface.h  editor_instanceinterface.h  editorinterface.h  generatorinterface.h  guiinterface.h  lexemtype.h  plugininterface.h  runinterface.h  startpage_widget_interface.h
scripts/: .astylerc  gen_actor_source.py  query_version_info.py
src/app/: CMakeLists.txt  kumir2-launcher.cpp
src/kumir2-libs/: CMakeLists.txt
src/kumir2-libs/vm/: CMakeLists.txt  context.hpp  stack.hpp  variant.cpp  variant.hpp  vm.cpp  vm.hpp  vm_abstract_handlers.cpp  vm_abstract_handlers.h  vm_breakpoints_table.cpp  vm_breakpoints_table.hpp  vm_bytecode.cpp  vm_bytecode.hpp  vm_console_handlers.cpp  vm_console_handlers.hpp  vm_dll.h  vm_enums.h  vm_instruction.cpp  vm_instruction.hpp  vm_tableelem.cpp  vm_tableelem.hpp
src/tools/: CMakeLists.txt
userdocs/language/: math.xml  stringutils.xml
(+369 files in other folders)
